--- a/my-project/index.html
+++ b/my-project/index.html
@@ -7,6 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
+    <nav class="grid place-content-between">
+      <div></div>
+      <div></div>
+    </nav>
+  </header>
 </body>
 </html>
