downloading neccessary image for the index page

--- a/my-project/index.html
+++ b/my-project/index.html
@@ -3,14 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="my-project/src/style.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <title>Document</title>
 </head>
 <body>
-  <header>
-    <nav class="grid place-content-between">
-      
-    </nav>
-  </header>
+  <div class="w-full h-full bg-[url(../Icons/eee.jpeg)] bg-cover"></div>
 </body>
 </html>
