recreating the files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="w-full h-full bg-[url(../Icons/eee.jpeg)] bg-cover"></div>
+  hello
 </body>
 </html>
