--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <title>Document</title>
-</head>
-<body>
-  hello
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <title>Document</title>
+        <link
+            href="
+https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
+"
+            rel="stylesheet"
+        />
+    </head>
+    <body
+        class="bg-[url(img.jpeg)] min-h-screen bg-cover bg-[position:66%_75%]"
+        >
+        <div class="container flex flex-col justify-between items-center p-6 w-full min-h-screen">
+          <h1 class=" lg:mt[40px] text-4xl/[55px] font-bold">
+            Shoot beyound <br>
+             limits
+          </h1>
+          <div class="flex items-center justify-center border-[2px] w-90 rounded-full sm:w-[30%] md:w-[40%] lg:w-[30%]  h-[40px] bg-[#20b08d] hover:bg-[#106e56]">
+            Get Started
+            <i class="ri-arrow-right-double-line ml-[10px] mb-[10px]"></i>
+          </button>
+        </div>
+  
+  </body>
 </html>
