finished the statues and the header and starting work on the cards

--- a/home.html
+++ b/home.html
@@ -19,30 +19,87 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
                 <i class="ri-search-line"></i>
             </div>
             <div class="pt-2">
-                <h2 class="text-2xl">
-                    bloger of the week
-                </h2>
+                <h2 class="text-2xl">bloger of the week</h2>
             </div>
-            <div class="flex mt-[10px] ">
-                <div class="card flex flex-col items-center w-23 p-[3px] ">
-                    <img class="w-20 h-20 rounded-full" src="images/pexels-photo-1687675.webp" alt="">
+            <div class="flex mt-[10px]">
+                <div class="card flex flex-col items-center w-23 p-[3px]">
+                    <img
+                        class="w-20 h-20 rounded-full"
+                        src="images/pexels-photo-1687675.webp"
+                        alt=""
+                    />
                     <h3>lan</h3>
                 </div>
-                <div class="card flex flex-col items-center w-23 p-[3px] ">
-                    <img class="w-20 h-20 rounded-full" src="images/pexels-photo-1687675.webp" alt="">
+                <div class="card flex flex-col items-center w-23 p-[3px]">
+                    <img
+                        class="w-20 h-20 rounded-full"
+                        src="images/pexels-photo-1687675.webp"
+                        alt=""
+                    />
                     <h3>lan</h3>
                 </div>
-                <div class="card flex flex-col items-center  w-23 p-[3px] ">
-                    <img class="w-20 h-20 rounded-full" src="images/pexels-photo-1687675.webp" alt="">
+                <div class="card flex flex-col items-center w-23 p-[3px]">
+                    <img
+                        class="w-20 h-20 rounded-full"
+                        src="images/pexels-photo-1687675.webp"
+                        alt=""
+                    />
                     <h3>lan</h3>
                 </div>
-                <div class="card flex flex-col items-center  w-23 p-[3px] ">
-                    <img class="w-20 h-20 rounded-full" src="images/pexels-photo-1687675.webp" alt="">
+                <div class="card flex flex-col items-center w-23 p-[3px]">
+                    <img
+                        class="w-20 h-20 rounded-full"
+                        src="images/pexels-photo-1687675.webp"
+                        alt=""
+                    />
                     <h3>lan</h3>
                 </div>
             </div>
-            <div class="border-2 w-full h-13">
-                
+            <div class="w-full h-12 overflow-x-scroll ">
+                <div class="flex items-center w-[1000px] h-full">
+                    <div
+                        class="flex items-center border-[1px] h-[80%] rounded-full px-4 mx-[5px] bg-emerald-400 hover:bg-emerald-600"
+                    >
+                        <h3>All</h3>
+                    </div>
+                    <div
+                        class="flex items-center border-[1px] h-[80%] rounded-full px-4 mx-[5px] bg-emerald-400 hover:bg-emerald-600"
+                    >
+                        <h3>Forest</h3>
+                    </div>
+                    <div
+                        class="flex items-center border-[1px] h-[80%] rounded-full px-4 mx-[5px] bg-emerald-400 hover:bg-emerald-600"
+                    >
+                        <h3>Beach</h3>
+                    </div>
+                    <div
+                        class="flex items-center border-[1px] h-[80%] rounded-full px-4 mx-[5px] bg-emerald-400 hover:bg-emerald-600"
+                    >
+                        <h3>nature</h3>
+                    </div>
+                    <div
+                        class="flex items-center border-[1px] h-[80%] rounded-full px-4 mx-[5px] bg-emerald-400 hover:bg-emerald-600"
+                    >
+                        <h3>Mountains</h3>
+                    </div>
+                    <div
+                        class="flex items-center border-[1px] h-[80%] rounded-full px-4 mx-[5px] bg-emerald-400 hover:bg-emerald-600"
+                    >
+                        <h3>River</h3>
+                    </div>
+                    <div
+                        class="flex items-center border-[1px] h-[80%] rounded-full px-4 mx-[5px] bg-emerald-400 hover:bg-emerald-600"
+                    >
+                        <h3>Canions</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="border-2 flex justify-center h-[750px]">
+                <div class="relative border-2 w-[95%] h-100 mt-1 rounded-2xl overflow-hidden ">
+                    <img class="absolute top-0 w-full h-[70%] border-1 border-t-0 " src="images/hik.webp" alt="">
+                    <h3 class="absolute bottom-21 left-2 text-2xl">yellow river</h3>
+                    <p class="absolute bottom-15 left-2 text-sm">By lan Jacobson</p>
+                </div>
             </div>
         </div>
     </body>
