first card is finiched in the home page

--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
                     <h3>lan</h3>
                 </div>
             </div>
-            <div class="w-full h-12 overflow-x-scroll ">
+            <div class="w-full h-12 overflow-x-scroll">
                 <div class="flex items-center w-[1000px] h-full">
                     <div
                         class="flex items-center border-[1px] h-[80%] rounded-full px-4 mx-[5px] bg-emerald-400 hover:bg-emerald-600"
@@ -95,10 +95,37 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
                 </div>
             </div>
             <div class="border-2 flex justify-center h-[750px]">
-                <div class="relative border-2 w-[95%] h-100 mt-1 rounded-2xl overflow-hidden ">
-                    <img class="absolute top-0 w-full h-[70%] border-1 border-t-0 " src="images/hik.webp" alt="">
-                    <h3 class="absolute bottom-21 left-2 text-2xl">yellow river</h3>
-                    <p class="absolute bottom-15 left-2 text-sm">By lan Jacobson</p>
+                <div
+                    class="relative border-2 w-[95%] h-100 mt-1 rounded-2xl overflow-hidden"
+                >
+                    <img
+                        class="absolute top-0 w-full h-[70%] border-1 border-t-0"
+                        src="images/hik.webp"
+                        alt=""
+                    />
+                    <h3 class="absolute bottom-14 left-4 text-3xl">
+                        yellow river
+                    </h3>
+                    <p class="absolute bottom-10 left-7 text-sm">
+                        By lan Jacobson
+                    </p>
+                    <div
+                        class="absolute z-1 text-4xl text-[#787171] right-3 top-2"
+                    >
+                        <i class="ri-poker-hearts-line"></i>
+                    </div>
+                    <p class="absolute right-35 bottom-23">China</p>
+                    <div class="absolute right-45 bottom-23">
+                        <i class="ri-map-pin-line"></i>
+                    </div>
+                    <p class="absolute right-16 bottom-23">15 min</p>
+                    <div class="absolute right-29 bottom-23">
+                        <i class="ri-time-line"></i>
+                    </div>
+                    <p class="absolute right-3 bottom-23">12k</p>
+                    <div class="absolute right-10 bottom-23">
+                        <i class="ri-eye-line"></i>
+                    </div>
                 </div>
             </div>
         </div>
