finished the html and tailwindcss code of the detaile page

--- a/home.html
+++ b/home.html
@@ -73,9 +73,9 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
                 </div>
             </div>
         </div>
-        <div class="border-2 flex flex-col items-center h-[1100px]">
-            <div class="relative border-2 w-[98%] h-70 mt-1 rounded-2xl overflow-hidden">
-                <img class="absolute top-0 w-full h-[70%] border-1 border-t-0" src="images/hik.webp" alt="River" />
+        <div class="flex flex-col items-center h-[1100px]">
+            <div class="relative -2 w-[98%] h-70 mt-1 rounded-2xl border-1 overflow-hidden">
+                <img class="absolute top-0 w-full h-[70%] border-b-1" src="images/hik.webp" alt="River" />
                 <h3 class="absolute bottom-12 left-7 text-2xl">
                     Yellow River
                 </h3>
@@ -98,16 +98,16 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
                     <i class="ri-eye-line"></i>
                 </div>
             </div>
-            <div class="flex justify-between border-2 w-[98%] h-50 overflow-hidden mt-3">
-                <div class=" border-2 relative w-[48%] h-[100%] rounded-2xl overflow-hidden">
-                    <img class="absolute top-0 w-full h-[70%] border-1 border-t-0" src="images/hik.webp" alt="" />
+            <div class="flex justify-between w-[98%] h-50 overflow-hidden mt-3">
+                <div class=" border-1 relative w-[48%] h-[100%] rounded-2xl overflow-hidden">
+                    <img class="absolute top-0 w-full h-[70%] border-b-1 border-t-0" src="images/hik.webp" alt="" />
                     <h4 class="absolute left-1 bottom-7 text-xl">Grand Canions</h4>
                     <div class="absolute z-1 text-4xl text-[#787171] right-2 top-0.25">
                         <i class="ri-poker-hearts-line"></i>
                     </div>
                 </div>
-                <div class="border-2 relative w-[48%] h-[100%] rounded-2xl overflow-hidden">
-                    <img class="absolute top-0 w-full h-[70%] border-1 border-t-0" src="images/hik.webp" alt="" />
+                <div class="border-1 relative w-[48%] h-[100%] rounded-2xl overflow-hidden">
+                    <img class="absolute top-0 w-full h-[70%] border-b-1 border-t-0" src="images/hik.webp" alt="" />
                     <h4 class="absolute left-1 bottom-7 text-xl">Grand Canions</h4>
                     <div class="absolute z-1 text-4xl text-[#787171] right-2 top-0.25">
                         <i class="ri-poker-hearts-line"></i>
@@ -115,8 +115,8 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
                 </div>
             </div>
             <!-- repetition card -->
-             <div class="relative border-2 w-[98%] h-70 mt-1 rounded-2xl overflow-hidden">
-                <img class="absolute top-0 w-full h-[70%] border-1 border-t-0" src="images/hik.webp" alt="River" />
+             <div class="relative border-1 w-[98%] h-70 mt-1 rounded-2xl overflow-hidden">
+                <img class="absolute top-0 w-full h-[70%] border-b-1 border-t-0" src="images/hik.webp" alt="River" />
                 <h3 class="absolute bottom-12 left-7 text-2xl">
                     Yellow River
                 </h3>
@@ -140,16 +140,16 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
                 </div>
             </div>
             <!-- repetition -->
-             <div class="flex justify-between border-2 w-[98%] h-50 overflow-hidden mt-3">
-                <div class=" border-2 relative w-[48%] h-[100%] rounded-2xl overflow-hidden">
-                    <img class="absolute top-0 w-full h-[70%] border-1 border-t-0" src="images/hik.webp" alt="" />
+             <div class="flex justify-between w-[98%] h-50 overflow-hidden mt-3">
+                <div class=" border-1 relative w-[48%] h-[100%] rounded-2xl overflow-hidden">
+                    <img class="absolute top-0 w-full h-[70%] border-b-1 border-t-0" src="images/hik.webp" alt="" />
                     <h4 class="absolute left-1 bottom-7 text-xl">Grand Canions</h4>
                     <div class="absolute z-1 text-4xl text-[#787171] right-2 top-0.25">
                         <i class="ri-poker-hearts-line"></i>
                     </div>
                 </div>
                 <div class="border-2 relative w-[48%] h-[100%] rounded-2xl overflow-hidden">
-                    <img class="absolute top-0 w-full h-[70%] border-1 border-t-0" src="images/hik.webp" alt="" />
+                    <img class="absolute top-0 w-full h-[70%] border-b-1 border-t-0" src="images/hik.webp" alt="" />
                     <h4 class="absolute left-1 bottom-7 text-xl">Grand Canions</h4>
                     <div class="absolute z-1 text-4xl text-[#787171] right-2 top-0.25">
                         <i class="ri-poker-hearts-line"></i>
