--- a/detailes.html
+++ b/detailes.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link href="
+https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
+" rel="stylesheet" />
     <title>Document</title>
 </head>
-<body>
-    
+
+<body class="min-h-screen">
+    <div class="min-h-screen">
+        <div class="border-2 absolute top-0 right-0 h-[45%] w-full">
+            <img class="absolute w-full h-full" src="images/hik.webp" alt="">
+            <p class="absolute right-34 bottom-2">China</p>
+            <div class="absolute right-45 bottom-2">
+                <i class="ri-map-pin-line"></i>
+            </div>
+            <p class="absolute right-15.5 bottom-2">15 min</p>
+            <div class="absolute right-28 bottom-2">
+                <i class="ri-time-line"></i>
+            </div>
+            <p class="absolute right-2 bottom-2">12k</p>
+            <div class="absolute right-9 bottom-2">
+                <i class="ri-eye-line"></i>
+            </div>
+            <h1 class="absolute bottom-12 left-3 text-3xl ">Yellow River</h1>
+            <p class="absolute bottom-6 left-7 ">By lan Jacobson</p>
+        </div>
+        <div class="flex items-center px-4 justify-between w-full absolute top-78 bg-[#ffffff]">
+            <h3>lets begin to read</h3>
+            <h3 >End</h3>
+        </div>
+        <div class=" absolute top-85 flex justify-center w-full h-2 bg-[#ffffff]">
+            <div class="flex border-1 w-[90%] rounded-full h-full">
+                <div class="bg-emerald-600 w-[10%] rounded-full h-full"></div>
+            </div>
+        </div>
+        <div class=" w-full h-150 absolute top-95">
+            <p class="px-4">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur explicabo voluptatem saepe esse modi sit dolores aliquam, eaque nulla, incidunt architecto temporibus ullam! In neque sed quidem qui eius excepturi. <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae ratione voluptas possimus omnis accusantium provident delectus cum voluptatem. Soluta eaque optio a quae ipsa facere at libero dignissimos temporibus! <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam architecto hic consectetur. Fugiat, qui facilis enim atque, iste quibusdam odio natus labore suscipit non quidem quisquam. Odio quaerat tempora quis?
+            </p>
+        </div>
+        <div class="border-2 flex justify-evenly items-center fixed bottom-0 left-0 rounded-full bg-[#ffffff] z-4 w-full h-20 ">
+            <div class="flex flex-col items-center bg-emerald-400 hover:bg-emerald-600 w-18 h-18 rounded-2xl" >
+                <div class="text-3xl" >
+                    <i class="ri-home-4-line "></i>
+                </div>
+                <h6>Home</h6>
+            </div>
+            
+            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl" >
+                <div class="text-3xl">
+                    <i class="ri-map-pin-line"></i>
+                </div>
+                <h6>Location</h6>
+            </div>
+            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl" >
+                <div class="text-3xl">
+                    <i class="ri-heart-3-line"></i>
+                </div>
+                <h6>whishlist</h6>
+            </div>
+            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl" >
+                <div class="text-3xl">
+                    <i class="ri-user-3-line"></i>
+                </div>
+                <h6>Profile</h6>
+
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
