linking the details page with home page

--- a/detailes.html
+++ b/detailes.html
@@ -32,7 +32,7 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
         </div>
         <div class="flex items-center px-4 justify-between w-full absolute top-78 bg-[#ffffff]">
             <h3>lets begin to read</h3>
-            <h3 >End</h3>
+            <h3>End</h3>
         </div>
         <div class=" absolute top-85 flex justify-center w-full h-2 bg-[#ffffff]">
             <div class="flex border-1 w-[90%] rounded-full h-full">
@@ -41,32 +41,42 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
         </div>
         <div class=" w-full h-150 absolute top-95">
             <p class="px-4">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur explicabo voluptatem saepe esse modi sit dolores aliquam, eaque nulla, incidunt architecto temporibus ullam! In neque sed quidem qui eius excepturi. <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae ratione voluptas possimus omnis accusantium provident delectus cum voluptatem. Soluta eaque optio a quae ipsa facere at libero dignissimos temporibus! <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam architecto hic consectetur. Fugiat, qui facilis enim atque, iste quibusdam odio natus labore suscipit non quidem quisquam. Odio quaerat tempora quis?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur explicabo voluptatem saepe esse
+                modi sit dolores aliquam, eaque nulla, incidunt architecto temporibus ullam! In neque sed quidem qui
+                eius excepturi. <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae ratione voluptas possimus omnis
+                accusantium provident delectus cum voluptatem. Soluta eaque optio a quae ipsa facere at libero
+                dignissimos temporibus! <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam architecto hic consectetur. Fugiat,
+                qui facilis enim atque, iste quibusdam odio natus labore suscipit non quidem quisquam. Odio quaerat
+                tempora quis?
             </p>
         </div>
-        <div class="border-2 flex justify-evenly items-center fixed bottom-0 left-0 rounded-full bg-[#ffffff] z-4 w-full h-20 ">
-            <div class="flex flex-col items-center bg-emerald-400 hover:bg-emerald-600 w-18 h-18 rounded-2xl" >
-                <div class="text-3xl" >
-                    <i class="ri-home-4-line "></i>
+        <div
+            class="border-2 flex justify-evenly items-center fixed bottom-0 left-0 rounded-full bg-[#ffffff] z-4 w-full h-20 ">
+            <a href="home.html">
+                <div class="flex flex-col items-center bg-emerald-400 hover:bg-emerald-600 w-18 h-18 rounded-2xl">
+
+                    <div class="text-3xl">
+                        <i class="ri-home-4-line "></i>
+                    </div>
+                    <h6>Home</h6>
+
                 </div>
-                <h6>Home</h6>
-            </div>
-            
-            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl" >
+            </a>
+            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl">
                 <div class="text-3xl">
                     <i class="ri-map-pin-line"></i>
                 </div>
                 <h6>Location</h6>
             </div>
-            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl" >
+            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl">
                 <div class="text-3xl">
                     <i class="ri-heart-3-line"></i>
                 </div>
                 <h6>whishlist</h6>
             </div>
-            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl" >
+            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl">
                 <div class="text-3xl">
                     <i class="ri-user-3-line"></i>
                 </div>
