finished the head of the profile page

--- a/index.html
+++ b/index.html
@@ -14,17 +14,26 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
     </head>
     <body
         class="bg-[url(img.jpeg)] min-h-screen bg-cover bg-[position:66%_75%]"
+    >
+        <div
+            class="container flex flex-col justify-between items-center p-6 w-full min-h-screen"
         >
-        <div class="container flex flex-col justify-between items-center p-6 w-full min-h-screen">
-          <h1 class=" lg:mt[40px] text-4xl/[55px] font-bold">
-            Shoot beyound <br>
-             limits
-          </h1>
-          <div class="flex items-center justify-center border-[2px] w-90 rounded-full sm:w-[30%] md:w-[40%] lg:w-[30%]  h-[40px] bg-[#20b08d] hover:bg-[#106e56]">
-            Get Started
-            <i class="ri-arrow-right-double-line ml-[10px] mb-[10px]"></i>
-          </button>
+            <h1 class="lg:mt[40px] text-4xl/[55px] font-bold">
+                Shoot beyound <br />
+                limits
+            </h1>
+            <a class="flex items-center justify-center w-90 h-[40px]" href="home.html">
+                <div
+                    class="flex items-center justify-center border-[2px] w-90 rounded-full h-[40px] bg-[#20b08d] hover:bg-[#106e56]"
+                >
+                    Get Started
+                    <div>
+                        <i
+                            class="ri-arrow-right-double-line ml-[10px] mb-[10px]"
+                        ></i>
+                    </div>
+                </div>
+            </a>
         </div>
-  
-  </body>
+    </body>
 </html>
