creating the branche v2

--- a/detailes.html
+++ b/detailes.html
@@ -52,35 +52,31 @@ https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css
                 tempora quis?
             </p>
         </div>
-        <div
-            class="border-2 flex justify-evenly items-center fixed bottom-0 left-0 rounded-full bg-[#ffffff] z-4 w-full h-20 ">
-            <a href="home.html">
-                <div class="flex flex-col items-center bg-emerald-400 hover:bg-emerald-600 w-18 h-18 rounded-2xl">
-
-                    <div class="text-3xl">
-                        <i class="ri-home-4-line "></i>
-                    </div>
-                    <h6>Home</h6>
-
+        <div class="border-2 flex justify-evenly items-center fixed bottom-0 left-0 rounded-full bg-[#ffffff] z-4 w-full h-20 ">
+            <div class="flex flex-col items-center bg-emerald-400 hover:bg-emerald-600 w-18 h-18 rounded-2xl" >
+                <div class="text-3xl" >
+                    <i class="ri-home-4-line "></i>
                 </div>
-            </a>
-            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl">
+                <h6>Home</h6>
+            </div>
+            
+            <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl" >
                 <div class="text-3xl">
                     <i class="ri-map-pin-line"></i>
                 </div>
-                <h6>Location</h6>
+                <h4>Location</h4>
             </div>
             <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl">
                 <div class="text-3xl">
                     <i class="ri-heart-3-line"></i>
                 </div>
-                <h6>whishlist</h6>
+                <h4>whishlist</h4>
             </div>
             <div class="flex flex-col items-center hover:bg-emerald-600 w-18 h-18 rounded-2xl">
                 <div class="text-3xl">
                     <i class="ri-user-3-line"></i>
                 </div>
-                <h6>Profile</h6>
+                <h4>Profile</h4>
 
             </div>
         </div>
